@@ -1,5 +1,11 @@
   * added support for typsetting define-relation relations
 
+  * made apply-reduction-relation* call remove-duplicates
+    on the result of apply-reduction-relation
+
+  * added the #:cache-all? argument to apply-reduction-relation*
+    and the current-cache-all? parameter
+
 v5.1.1
 
   * changed pattern language to disallow unquote
